# evolutionary-gpt-agent

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  devc.py  docker-compose.yml  environment_configuration.toml  migrations.sh  pyproject.toml
agent-pov/: .prettierrc  decs.d.ts  index.html  package-lock.json  package.json
agent-pov/src/: main.tsx
agent-pov/src/components/: BeliefsetDetailsCard.tsx  CustomNodeElement.tsx  ExperimentInfoCard.tsx  Navbar.tsx
agent-pov/src/pages/: BeliefsetDetailsPage.tsx  BeliefsetListPage.tsx  BeliefsetPage.tsx  CheckpointTreePage.tsx  EventListPage.tsx  ExperimentDetailsPage.tsx  ExperimentListPage.tsx  ExperimentPage.tsx  PerceiverListPage.tsx  PlanListPage.tsx
docker-images/: agent_pov  agent_pov_server  deliveroo  deliveroo_client  evolutionary_gpt_agent
prompts/: #deliveroo_prefix.template#  belief_set_representation.template  deliveroo_prefix.template  description.template  expand_goal.template  expand_single_goal.template  goal.template  is_event_missing.prompt  knowledge_representation.template  new_action.template  new_consistency_rule.template  new_event.template  new_inferenced_event.template  new_perceiver.template  refactor_perceiver.template  single_goal.template  title.template
src/agent_pov_server/: main.py
src/agent_pov_server/dao/: beliefset.py  checkpoint.py  experiment.py  experiments.py  perceiver.py
src/agent_pov_server/schemas/: beliefset.py  checkpoint.py  experiment.py  perceiver.py
src/data_model/: db_handler.py  mappers.py
src/data_model/api/: __init__.py  event.py
src/data_model/db/: models.py
src/data_model/db/alembic/: env.py
src/data_model/db/alembic/versions/: 0cc85fd39258_add_bytes_belief_set_representation.py  3fdd264a47e2_perceiver.py  66831e2f475b_add_plan.py  8d222deca6aa_add_experiment_to_beief_set.py  c2d4d3c3f862_add_actions_to_plan.py
src/deliveroo_client/: main.py
src/deliveroo_client/components/: agent_to_environment.py  environment_to_agent.py  socket_client.py
src/evolutionary_gpt_agent/components/: db_handler.py  environment_listener.py  gpt_client.py
src/evolutionary_gpt_agent/components/bdi/: actuators_handler.py  agent.py  tester.py
src/evolutionary_gpt_agent/entrypoints/: dev.py  estimate_costs.py  main.py
src/models/: alembic.ini  db_handler.py  mappers.py  models.py
src/models/alembic/: env.py
src/models/alembic/versions/: 929da108421e_init.py
src/models/api/: __init__.py  event.py
src/models/db/: models.py
src/models/db/alembic/: env.py
src/models/db/alembic/versions/: 0cc85fd39258_add_bytes_belief_set_representation.py  14c9b1f5fa23_perceiver.py  40a92857b01e_fix_plan.py  4f24a0671402_experiment_event.py  c258abd161e8_add_event_game_dump.py
